# automation

./: README.md  existing-contacts.txt  pyproject.toml
assets/: emails.txt  phone_numbers.txt
automation/: pyproject.toml
automation/automation/: automation.py
automation/tests/: test_automation.py
